--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* reset
 ----------------------------------------- */
 * {
@@ -32,6 +31,10 @@ ol, ul {
   list-style-type: none;
 }
 
+@font-face {
+  font-family: "honokamarugo";
+  src: url(/common/font/font_1_honokamarugo_1.1.ttf);
+}
 /* font-size
 ------------------------------------------- */
 /* media-query
@@ -39,11 +42,11 @@ ol, ul {
 /* base
 ----------------------------------------- */
 body {
-  font-family: "メイリオ", Meiryo, "ヒラギノ角ゴシック", "Hiragino Sans", sans-serif;
-  font-size: 0.75rem;
-  line-height: 1.5;
-  color: #333;
-  background: #fff;
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #080B0C;
+  background: #FFFCF9;
 }
 
 img {
@@ -59,111 +62,70 @@ a {
   cursor: pointer;
   width: 100%;
   height: inherit;
-  color: #333;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-a:focus, a:hover {
-  opacity: 0.6;
+  color: #080B0C;
 }
 
 button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background: none;
   border: none;
 }
 
 /* header
 -------------------------------- */
-.ly_header {
+.header {
   width: 100%;
-  padding: 2rem 0 1.9375rem;
-  position: fixed;
+  height: 100px;
+  padding: 35px 0 36px 0;
+  background: rgba(255, 252, 249, 0.5);
+  position: sticky;
   top: 0;
-  left: 0;
-}
-@media screen and (max-width: 900px) {
-  .ly_header {
-    padding: 1.75rem 0 1.6875rem;
-  }
 }
 
-.ly_header_inner {
-  max-width: 1360px;
-  padding: 0 2.78vw;
+.header__inner {
+  width: 66%;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-@media screen and (max-width: 900px) {
-  .ly_header_inner {
-    padding: 0 10.67vw;
-  }
 }
 
 /* main
 -------------------------------- */
-.ly_main {
-  max-width: 1360px;
-  padding: 0 2.78vw;
-  margin: 5.5rem auto 0;
-}
-@media screen and (max-width: 900px) {
-  .ly_main {
-    padding: 0 10.67vw;
-  }
-}
-
-.ly_main_gridContainer {
-  display: grid;
-  grid-template: repeat(2, 46.7756%)/repeat(4, 22.9%);
-  gap: 2.5rem 2.75%;
-}
-@media screen and (max-width: 900px) {
-  .ly_main_gridContainer {
-    grid-template: repeat(4, 23.1207%)/repeat(2, 46.9966%);
-    gap: 1.375rem 6%;
-  }
-}
-
 /* footer
 -------------------------------- */
-.ly_footer {
-  margin-top: 3.375rem;
-  padding-bottom: 0.75rem;
-}
-@media screen and (max-width: 900px) {
-  .ly_footer {
-    margin-top: 6.375rem;
-    padding-bottom: 1.1875rem;
-  }
-}
-
-.ly_footer_inner {
-  max-width: 1360px;
-  padding: 0 2.78vw;
-  margin: 0 auto;
+/* global-nav
+----------------------------------------- */
+.global-nav__items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
-@media screen and (max-width: 900px) {
-  .ly_footer_inner {
-    padding: 0 10.67vw;
-    display: block;
-  }
+
+.global-nav__link {
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+  position: relative;
+}
+.global-nav__link::before {
+  content: "";
+  width: 0%;
+  height: 3px;
+  background: #6699A1;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  -webkit-transition: width ease 0.3s;
+  transition: width ease 0.3s;
+}
+.global-nav__link:focus::before, .global-nav__link:hover::before {
+  width: 110%;
 }
 
 /* logo
@@ -183,6 +145,49 @@ button {
 -------------------------------- */
 .el_copy {
   font-size: 0.625rem;
+}
+
+/* mv
+----------------------------------------- */
+.mv {
+  width: 100%;
+  height: 504px;
+  background: url(/top/img/mv.jpg) no-repeat center top/cover;
+  position: relative;
+}
+.mv::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.mv__inner {
+  text-align: center;
+  position: relative;
+}
+
+.mv-contents {
+  position: absolute;
+  top: 84px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+.mv-contents__title {
+  font-family: honokamarugo, sans-serif;
+  font-size: 6.25rem;
+  letter-spacing: 0.18em;
+  line-height: 1.2;
+}
+.mv-contents__lead-text {
+  font-size: 0.875rem;
+  letter-spacing: 0.13em;
 }
 
 /* hp_copy
