--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
+  letter-spacing: 0.18em;
   color: #080B0C;
   background: #FFFCF9;
 }
@@ -52,7 +53,7 @@ body {
 img {
   width: 100%;
   max-width: 100%;
-  height: auto;
+  height: 100%;
   vertical-align: middle;
 }
 
@@ -146,11 +147,54 @@ section {
 
 /* btn
 -------------------------------- */
-.el_btn {
-  display: inline-block;
-  font-size: 0.875rem;
+.btn-wrapper {
+  text-align: center;
 }
 
+.btn {
+  display: inline-block;
+  font-size: 1.25rem;
+}
+
+.arrow-btn {
+  display: inline;
+  padding-bottom: 1.25rem;
+  position: relative;
+}
+.arrow-btn::before {
+  content: "";
+  width: 160%;
+  height: 14px;
+  border-right: 1px solid #080B0C;
+  border-bottom: 1px solid #080B0C;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%) skewX(45deg);
+          transform: translateX(-50%) skewX(45deg);
+}
+.arrow-btn:focus::before, .arrow-btn:hover::before {
+  -webkit-animation: arrowBtn 1s ease-out;
+          animation: arrowBtn 1s ease-out;
+}
+
+@-webkit-keyframes arrowBtn {
+  0%, 100% {
+    width: 160%;
+  }
+  30%, 50% {
+    width: 140%;
+  }
+}
+
+@keyframes arrowBtn {
+  0%, 100% {
+    width: 160%;
+  }
+  30%, 50% {
+    width: 140%;
+  }
+}
 /* copy
 -------------------------------- */
 .el_copy {
@@ -162,7 +206,6 @@ section {
 .section-title {
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 0.18em;
   text-transform: uppercase;
   text-align: center;
 }
@@ -194,6 +237,10 @@ section {
   border-radius: 10px 100px;
 }
 
+.layer_br20::before {
+  border-radius: 20px;
+}
+
 /* mv
 ----------------------------------------- */
 .mv {
@@ -217,7 +264,6 @@ section {
 .mv-contents__title {
   font-family: honokamarugo, sans-serif;
   font-size: 6.25rem;
-  letter-spacing: 0.18em;
   line-height: 1.2;
 }
 .mv-contents__lead-text {
@@ -225,7 +271,7 @@ section {
   letter-spacing: 0.13em;
 }
 
-/* about
+/* top-about
 ----------------------------------------- */
 .about {
   padding-top: 87px;
@@ -234,7 +280,6 @@ section {
 .about-contents {
   width: calc(944 / 1200 * 100%);
   height: 350px;
-  margin-top: 60px;
   background: url(/top/img/top_about.jpg) no-repeat center -55px/cover;
   border-radius: 10px 100px;
   position: relative;
@@ -264,9 +309,80 @@ section {
           transform: translateY(-50%);
 }
 
-/* hp_copy
--------------------------------- */
-.hp_copy_spSpace {
-  margin-top: 0.3125rem;
+/* top-products
+----------------------------------------- */
+.products-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: -35px;
+}
+
+.products-list__item {
+  width: calc(100% / 2 - 40px * 1 / 2);
+  margin-bottom: 35px;
+}
+
+.products-banner {
+  width: 100%;
+  height: 196px;
+  border-radius: 20px;
+  background: #6699A1;
+  -webkit-transition: border 0.3s;
+  transition: border 0.3s;
+}
+.products-banner img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
+.products-banner_yt img {
+  -o-object-position: center 65%;
+     object-position: center 65%;
+}
+.products-banner_n img {
+  -o-object-position: center 70%;
+     object-position: center 70%;
+}
+.products-banner_s img {
+  -o-object-position: center 35%;
+     object-position: center 35%;
+}
+.products-banner_na img {
+  -o-object-position: center 48%;
+     object-position: center 48%;
+}
+.products-banner:focus, .products-banner:hover {
+  border: 10px solid #6699A1;
+}
+
+.products-list__text-wrapper {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.products-list__title {
+  padding-top: 1.5625rem;
+  font-size: 1.25rem;
+}
+
+.products-list__text {
+  padding-top: 1.125rem;
+  letter-spacing: 0.12em;
+}
+
+/* margin
+----------------------------------------- */
+.contents_mt {
+  margin-top: 60px;
+}
+
+.products-btn_mt {
+  margin-top: 95px;
 }
 /*# sourceMappingURL=style.css.map */
