--- a/sass/component/element/_btn.scss
+++ b/sass/component/element/_btn.scss
@@ -3,7 +3,47 @@
 
 /* btn
 -------------------------------- */
-.el_btn {
+.btn-wrapper {
+    text-align: center;
+}
+
+.btn {
     display: inline-block;
-    font-size: g.rem(14px);
+    font-size: g.rem(20px);
+}
+
+.arrow-btn {
+    display: inline;
+    padding-bottom: g.rem(20px);
+    position: relative;
+
+    &::before {
+        content: '';
+        width: 160%;
+        height: 14px;
+        border-right: 1px solid g.$cText_bk;
+        border-bottom: 1px solid g.$cText_bk;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%) skewX(45deg);
+    }
+
+    &:focus, &:hover {
+        &::before {
+            animation: arrowBtn 1s ease-out;
+        }
+    }
+
+}
+
+@keyframes arrowBtn {
+    0%,
+    100% {
+        width: 160%;
+    }
+    30%,
+    50% {
+        width: 140%;
+    }
 }
