--- a/sass/foundation/_base.scss
+++ b/sass/foundation/_base.scss
@@ -7,6 +7,7 @@ body {
     font-family: g.$fontMain;
     font-size: g.rem(16px);
     line-height: 1.6;
+    letter-spacing: .18em;
     color: g.$cText_bk;
     background: g.$cBg_main;
 }
@@ -14,7 +15,7 @@ body {
 img {
     width: 100%;
     max-width: 100%;
-    height: auto;
+    height: 100%;
     vertical-align: middle;
 }
 
