--- a/sass/page/top/_about.scss
+++ b/sass/page/top/_about.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @use "../../global" as g;
 
-/* about
+/* top-about
 ----------------------------------------- */
 .about {
     padding-top: 87px;
@@ -10,7 +10,6 @@
 .about-contents {
     width: calc(944 / 1200 * 100%);
     height: 350px;
-    margin-top: 60px;
     background: url(/top/img/top_about.jpg) no-repeat center -55px / cover;
     border-radius: 10px 100px;
     position: relative;
