--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,33 @@ section {
   width: 110%;
 }
 
+/* access
+----------------------------------------- */
+.access__map-wrapper {
+  width: 50%;
+}
+.access__map-wrapper iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.access-info {
+  width: 45%;
+  background: rgba(102, 153, 161, 0.3);
+  padding: 4.0625rem 2.5rem;
+}
+.access-info dt {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+.access-info dt:not(:first-of-type) {
+  margin-top: 1.25rem;
+}
+.access-info dd {
+  line-height: 1.875;
+  margin-top: 0.625rem;
+}
+
 /* logo
 -------------------------------- */
 .el_logo {
@@ -420,15 +447,6 @@ section {
   right: 0;
 }
 
-.news-contents__flex-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 .news-list__item {
   display: inline-block;
 }
@@ -437,12 +455,6 @@ section {
 }
 
 .news-list__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -547,5 +559,16 @@ section {
 
 .events-btn_mt {
   margin-top: 75px;
+}
+
+/* flex
+----------------------------------------- */
+.flex-wrapper_sb {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=style.css.map */
