--- a/sass/utility/_flex.scss
+++ b/sass/utility/_flex.scss
@@ -6,3 +6,8 @@
     display: flex;
     justify-content: space-between;
 }
+
+.flex-wrapper_c {
+    display: flex;
+    justify-content: center;
+}
