--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,3 +3,13 @@
 
 /* footer
 -------------------------------- */
+.footer {
+    margin-top: 150px;
+    background: g.$cMain;
+    padding: 41px 0 42px;
+    position: relative;
+}
+
+.footer-contents {
+    text-align: center;
+}
