[Fix]top-aboutのリンク関連

--- a/css/style.css
+++ b/css/style.css
@@ -382,8 +382,6 @@ section {
 .about-contents {
   width: calc(944 / 1200 * 100%);
   height: 350px;
-  background: url(/top/img/top_about.jpg) no-repeat center -55px/cover;
-  border-radius: 10px 100px;
   position: relative;
 }
 .about-contents::after {
@@ -397,6 +395,21 @@ section {
   top: -175px;
   right: -27%;
   z-index: -5;
+}
+
+.about__link {
+  background: url(/top/img/top_about.jpg) no-repeat center -55px/cover;
+  border-radius: 10px 100px;
+  position: relative;
+  z-index: 5;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+.about__link:focus, .about__link:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
 }
 
 .about__lead-text {
