--- a/sass/page/top/_about.scss
+++ b/sass/page/top/_about.scss
@@ -10,8 +10,6 @@
 .about-contents {
     width: calc(944 / 1200 * 100%);
     height: 350px;
-    background: url(/top/img/top_about.jpg) no-repeat center -55px / cover;
-    border-radius: 10px 100px;
     position: relative;
 
     &::after {
@@ -25,6 +23,18 @@
         top: -175px;
         right: -27%;
         z-index: -5;
+    }
+}
+
+.about__link {
+    background: url(/top/img/top_about.jpg) no-repeat center -55px / cover;
+    border-radius: 10px 100px;
+    position: relative;
+    z-index: 5;
+    transition: transform .3s ease;
+
+    &:focus, &:hover {
+        transform: scale(1.02);
     }
 }
 
