--- a/sass/component/element/_section-title.scss
+++ b/sass/component/element/_section-title.scss
@@ -6,6 +6,7 @@
 .section-title {
     font-size: g.rem(32px);
     font-weight: 700;
+    letter-spacing: .2em;
     text-transform: uppercase;
     text-align: center;
 
