--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,3 +17,23 @@
     width: 66%;
     margin: 0 auto;
 }
+
+/* under-header
+-------------------------------- */
+.under-header {
+    width: 100%;
+    height: 100px;
+    padding: 27px 0 28px;
+    background: rgba(g.$cBg_main, .5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
+.under-header__inner {
+    width: 77%;
+    margin: 0 auto;
+    align-items: center;
+    position: relative;
+}
