--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,8 @@ section {
   background: #080B0C;
   position: absolute;
   left: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .under-header__nav-btn > span:first-of-type {
   top: 0;
@@ -257,9 +259,55 @@ section {
 .under-header__nav-btn > span:last-of-type {
   bottom: 0;
 }
+.under-header__nav-btn.js-open_btn > span:first-of-type {
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+}
+.under-header__nav-btn.js-open_btn > span:nth-of-type(2) {
+  opacity: 0;
+}
+.under-header__nav-btn.js-open_btn > span:last-of-type {
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
+          transform: translate(-50%, -50%) rotate(-45deg);
+}
 
 .under-header__open-contents {
-  display: none;
+  width: 100%;
+  padding: 73px 0 60px;
+  background: #6699A1;
+  position: absolute;
+  top: -500px;
+  left: 0;
+  -webkit-transition: top 0.4s;
+  transition: top 0.4s;
+}
+.under-header__open-contents.js-open_nav {
+  top: 100px;
+}
+
+.under-header__nav-list * + * {
+  margin-left: 82px;
+}
+
+.under-header__nav-link {
+  font-size: 1.25rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  background: #FFFCF9;
+  padding: 0.35em 1.2em 0.4em;
+  border-radius: 20px;
+}
+
+.under-header__sns {
+  width: 40%;
+  padding: 30px 40px 35px;
+  margin: 0 auto;
+  background: #FFFCF9;
+  border-radius: 20px;
 }
 
 /* top-view
@@ -804,6 +852,10 @@ section {
 
 .about-recruit_mt {
   margin-top: 80px;
+}
+
+.under-header__sns_mt {
+  margin-top: 40px;
 }
 
 /* flex
