--- a/sass/component/block/_recruit.scss
+++ b/sass/component/block/_recruit.scss
@@ -5,6 +5,7 @@
 ----------------------------------------- */
 .recruit {
     width: 59%;
+    text-align: center;
     margin: 0 auto;
     padding: 26px 50px 27px;
     position: relative;
