--- a/sass/component/block/_top-view.scss
+++ b/sass/component/block/_top-view.scss
@@ -12,6 +12,10 @@
     &_about {
         background: url(/about/img/about_topview.jpg) no-repeat center 26% / cover;
     }
+
+    &_products {
+        background: url(/products/img/products_topview.jpg) no-repeat center 65% / cover;
+    }
 }
 
 .top-view__title {
