--- a/sass/utility/_mt.scss
+++ b/sass/utility/_mt.scss
@@ -18,6 +18,10 @@
     margin-top: 80px;
 }
 
+.products-recruit_mt {
+    margin-top: 180px;
+}
+
 .under-header__sns_mt {
     margin-top: 40px;
 }
