--- a/sass/component/block/_top-view.scss
+++ b/sass/component/block/_top-view.scss
@@ -16,6 +16,10 @@
     &_products {
         background: url(/products/img/products_topview.jpg) no-repeat center 65% / cover;
     }
+
+    &_contact {
+        background: url(/contact/img/contact_topview.jpg) no-repeat center 40% / cover;
+    }
 }
 
 .top-view__title {
