--- a/sass/component/element/_btn.scss
+++ b/sass/component/element/_btn.scss
@@ -64,3 +64,45 @@
         color: g.$cMain;
     }
 }
+
+.send-btn {
+    appearance: none;
+    width: 370px;
+    max-width: 100%;
+    text-align: center;
+    font-family: g.$fontMain;
+    padding: 1.438em 0;
+    font-size: g.rem(24px);
+    font-weight: 700;
+    letter-spacing: .4em;
+    border-radius: 100px;
+    border: 1px solid #707070;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    transition: all .3s;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        background: g.$cMain;
+        border-radius: 100px;
+        transform-origin: right top;
+        transform: scale(0, 1);
+        transition: transform .3s;
+    }
+
+    &:focus, &:hover {
+        color: g.$cText_wh;
+
+        &::before {
+            transform-origin: left top;
+            transform: scale(1, 1);
+        }
+    }
+}
